# intelligent_task_planner

./: .env.example  .gitignore  DEMO_WALKTHROUGH.md  LICENSE  README.md  Steps to setup the project.txt  Stripe.md  collect_static.py  debug_completion_data.py  deployment_checklist.md  deployment_guide.md  diagnose_time_blocks.py  env_example.txt  epic_completion_summary.py  final_demo_optimization.py  final_verification.py  generate_secret_key.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_production.txt  tailwind.config.js  test_ai_fallback.py  test_ai_ui.py  test_api_endpoint.py  test_completion_data.py  test_fixed_query.py  test_notifications.py  test_python_grouping.py  wsgi_production.py
billing/: admin.py  context_processors.py  decorators.py  models.py  services.py  urls.py  views.py
billing/management/: __init__.py
billing/migrations/: 0001_initial.py
docs/: architecture.md  front-end-spec.md  google-oauth-setup.md  prd.md
docs/architecture/: coding-standards-revised.md  components.md  core-workflows.md  data-models.md  database-schema-refined.md  error-handling-strategy.md  external-apis-revised.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  security.md  source-tree-revised.md  (+2 more)
intelligent_task_planner/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
planner/: adapters.py  admin.py  forms.py  manual_scheduling.py  models.py  optimization_tracking.py  urls.py  views.py
templates/: base.html  base_animated.html  landing.html  pomodoro.html
(+129 files in other folders)
